# AgentTrater

./: .env.dev  .env.example  .gitignore  README.md  docker-compose.yml  fix_tests.py  pyproject.toml
.github/workflows/: contract-guard.yml
docs/: ARCHITECTURE.md  CONFIGURATION_GUIDE_CN.md  DATASOURCE.md  DATA_SOURCE_INTEGRATION.md  DB_DESIGN.md  DEMO_AGENT_DEVELOPMENT_CN.md  DEVELOPER_GUIDE_CN.md  DEVELOPMENT_CONVENTIONS.md  FastAPI_Note.md  INDEX.md  INGESTION_ARCHITECTURE_CN.md  MEASUREMENT_DESIGN.md  MONGO.md  QUICK_START_DEMO.md  README.md  REALTIME_M5_UPDATE_DESIGN.md  REAL_DATA_SOURCE_TESTING.md  SCHEDULER_DEVELOPMENT.md  SOURCE_CAPABILITY_CONTRACTS.md  TRADINGVIEW_FRONTEND_GUIDE.md  TUSHARE_INTEGRATION.md  TUSHARE_TOKEN_GUIDE.md  TUSHARE_TOKEN_SETUP_SUMMARY.md  UNIFIED_SOURCE_PAYLOAD_SPEC.md  datasource_stuct_img.py
examples/: tushare_integration_example.py  tushare_quick_test.py
frontend/admin-console/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/admin-console/src/: api.ts  main.ts  styles.css  types.ts
scripts/: agent_trader_schema.sql  check_mongo_data.py  clear_influxdb_bucket.py  demo_events.py  inspect_tushare_response_fields.py  migrate_basic_info_status.py  run_company_detail_sync_once.py  run_real_baostock_fetch.py  run_real_baostock_financial_fetch.py  run_test_baostock.py  verify_active_stocks.py
src/agent_trader/: __init__.py
src/agent_trader/agents/: __init__.py  (+3 more)
tests/: README.md  conftest.py  test_config.py  test_health.py  test_storage_clients.py  test_trigger_service.py  test_triggers.py  test_tushare_config_integration.py  test_tushare_ingestion.py  test_tushare_integration_live.py
tests/integration/: test_real_agent_integration.py  test_real_data_source_integration.py
tests/support/: in_memory_uow.py
(+143 files in other folders)
